# SphericalFiducialDetection

./: CMakeLists.txt
PointillismRegistration/: CMakeLists.txt  FiducialDetectionParameters.txt  PointillismRegistration.cxx  PointillismRegistration.xml
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_TSE_T2_fov_280_2/: IM-0001-0001.dcm  IM-0001-0002.dcm  IM-0001-0003.dcm  IM-0001-0004.dcm  IM-0001-0005.dcm  IM-0001-0006.dcm  IM-0001-0007.dcm  IM-0001-0008.dcm  IM-0001-0009.dcm  IM-0001-0010.dcm  IM-0001-0011.dcm  IM-0001-0012.dcm  IM-0001-0013.dcm  IM-0001-0014.dcm  IM-0001-0015.dcm  IM-0001-0016.dcm  IM-0001-0017.dcm  IM-0001-0018.dcm
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_TSE_T2_fov_280_4/: IM-0003-0001.dcm  IM-0003-0002.dcm  IM-0003-0003.dcm  IM-0003-0004.dcm  IM-0003-0005.dcm  IM-0003-0006.dcm  IM-0003-0007.dcm  IM-0003-0008.dcm  IM-0003-0009.dcm  IM-0003-0010.dcm  IM-0003-0011.dcm  IM-0003-0012.dcm  IM-0003-0013.dcm  IM-0003-0014.dcm  IM-0003-0015.dcm  IM-0003-0016.dcm  IM-0003-0017.dcm  IM-0003-0018.dcm
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_TSE_T2_fov_280_5/: IM-0004-0001.dcm  IM-0004-0002.dcm  IM-0004-0003.dcm  IM-0004-0004.dcm  IM-0004-0005.dcm  IM-0004-0006.dcm  IM-0004-0007.dcm  IM-0004-0008.dcm  IM-0004-0009.dcm  IM-0004-0010.dcm  IM-0004-0011.dcm  IM-0004-0012.dcm  IM-0004-0013.dcm  IM-0004-0014.dcm  IM-0004-0015.dcm  IM-0004-0016.dcm  IM-0004-0017.dcm  IM-0004-0018.dcm
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_VIBE_10/: IM-0009-0001.dcm  IM-0009-0002.dcm  IM-0009-0003.dcm  IM-0009-0004.dcm  IM-0009-0005.dcm  IM-0009-0006.dcm  IM-0009-0007.dcm  IM-0009-0008.dcm  IM-0009-0009.dcm  IM-0009-0010.dcm  IM-0009-0011.dcm  IM-0009-0012.dcm  IM-0009-0013.dcm  IM-0009-0014.dcm  IM-0009-0015.dcm  IM-0009-0016.dcm  IM-0009-0017.dcm  IM-0009-0018.dcm  IM-0009-0019.dcm  IM-0009-0020.dcm  IM-0009-0021.dcm  IM-0009-0022.dcm  IM-0009-0023.dcm  IM-0009-0024.dcm  IM-0009-0025.dcm  IM-0009-0026.dcm  IM-0009-0027.dcm  IM-0009-0028.dcm  IM-0009-0029.dcm  IM-0009-0030.dcm  IM-0009-0031.dcm  IM-0009-0032.dcm  IM-0009-0033.dcm  IM-0009-0034.dcm  IM-0009-0035.dcm  IM-0009-0036.dcm  IM-0009-0037.dcm  IM-0009-0038.dcm  IM-0009-0039.dcm  IM-0009-0040.dcm  (+20 more)
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_VIBE_11/: IM-0010-0001.dcm  IM-0010-0002.dcm  IM-0010-0003.dcm  IM-0010-0004.dcm  IM-0010-0005.dcm  IM-0010-0006.dcm  IM-0010-0007.dcm  IM-0010-0008.dcm  IM-0010-0009.dcm  IM-0010-0010.dcm  IM-0010-0011.dcm  IM-0010-0012.dcm  IM-0010-0013.dcm  IM-0010-0014.dcm  IM-0010-0015.dcm  IM-0010-0016.dcm  IM-0010-0017.dcm  IM-0010-0018.dcm  IM-0010-0019.dcm  IM-0010-0020.dcm  IM-0010-0021.dcm  IM-0010-0022.dcm  IM-0010-0023.dcm  IM-0010-0024.dcm  IM-0010-0025.dcm  IM-0010-0026.dcm  IM-0010-0027.dcm  IM-0010-0028.dcm  IM-0010-0029.dcm  IM-0010-0030.dcm  IM-0010-0031.dcm  IM-0010-0032.dcm  IM-0010-0033.dcm  IM-0010-0034.dcm  IM-0010-0035.dcm  IM-0010-0036.dcm  IM-0010-0037.dcm  IM-0010-0038.dcm  IM-0010-0039.dcm  IM-0010-0040.dcm  (+20 more)
PointillismRegistration/Data/2014-Jan17-NewFiducial/AX_VIBE_3/: IM-0002-0001.dcm  IM-0002-0002.dcm  IM-0002-0003.dcm  IM-0002-0004.dcm  IM-0002-0005.dcm  IM-0002-0006.dcm  IM-0002-0007.dcm  IM-0002-0008.dcm  IM-0002-0009.dcm  IM-0002-0010.dcm  IM-0002-0011.dcm  IM-0002-0012.dcm  IM-0002-0013.dcm  IM-0002-0014.dcm  IM-0002-0015.dcm  IM-0002-0016.dcm  IM-0002-0017.dcm  IM-0002-0018.dcm  (+42 more)
PointillismRegistration/Data/Input/: 10mmFiducialTest.nrrd  20mmFiducialTest.nrrd  3mmFiducialTest_resampled2.5.nrrd  4mmFiducialTest.nrrd  5mmFiducialTest.nrrd
PointillismRegistration/HoughTransform/: HoughTransformRadialVotingImageFilter3D.cxx  itkHoughTransformRadialVotingImageFilter.txx
SphericalFiducialDetection/: CMakeLists.txt  SphericalFiducialDetection.cxx  SphericalFiducialDetection.xml
SphericalFiducialDetection/Data/Input/: 3mmFiducialTest.nrrd  4mmFiducialTest_Resampled2.5.nrrd
SphericalFiducialDetection/GaussianNoise/: itkAdditiveGaussianNoiseImageFilter.txx
(+240 files in other folders)
